--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
+    "@atproto/api": "^0.12.13",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "debug": "~4.3.4",
