--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@atproto/api": "^0.12.13",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^3.6.0",
     "debug": "~4.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
